# irosh

./: .gitignore  AGENTS.md  CHANGELOG.md  CLI_COMMAND_TREE.md  CLI_UX_COMPONENTS.md  Cargo.toml  DIAGNOSTICS_DESIGN.md  ESCAPE_SEQUENCE_IMPLEMENTATION_ANALYSIS.md  ESCAPE_SEQUENCE_STRESS_TESTS.md  FUTURE_IDEAS.md  HANDOFF_WINDOWS.md  Irosh_CrossPlatform_Insights.md  MIGRATION_PLAN.md  PROJECT_DESIGN.md  README.md  RUST_GUIDELINES_REVIEW.md  SECURITY_ENHANCEMENTS.md  V0_4_0ROADMAP.md  V2_MIGRATION_HANDOVER.md  WINDOWS-CHECKLIST.md  WINDOWS_HANDOVER.md  WORMHOLE_DESIGN.md  WORMHOLE_PLAN.md  WORMHOLE_SECURITY-AUDIT.md  cargo_check_output.txt  cargo_test_output.txt  deny.toml  filelist.txt  migration_audit.md  note.md  pty_test.rs  query  scratch.rs  test_list_output.txt  update_pty.py  wormhole_flow_design.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml  windows-test.yml
benches/: benchmarks.rs
cli/: Cargo.toml
cli/beans/: client.rs  server.rs
cli/beans/client/: local.rs
cli/beans/client/support/: display.rs  history.rs  mod.rs
cli/beans/client/transfer/: download.rs  upload.rs
cli/proptest-regressions/commands/connect/: completion.txt
cli/src/: context.rs  display.rs  error.rs  main.rs  output.rs  terminal.rs
cli/src/commands/: check.rs  config.rs  dashboard.rs  host.rs  identity.rs  mod.rs  passwd.rs  peer.rs  status.rs  system.rs  trust.rs  wormhole.rs
cli/src/commands/connect/: ansi.rs  commands.rs  completion.rs  editor.rs  history.rs  input.rs  mod.rs  prompt.rs  session.rs  transfer.rs  tunnels.rs
cli/src/commands/connect/input/: completion.rs  core.rs  escape.rs  mod.rs  prompt.rs
cli/src/commands/connect/support/: alias.rs  mod.rs
cli/src/commands/connect/transfer/: mod.rs  upload.rs
cli/src/ui/: feedback.rs  messages.rs  mod.rs  prompts.rs  theme.rs
cli/test/test-client/peers/: kristency-linux.json  peer-45c10533.json
cli/test/test-server/trust/clients/: SHA256:bAMhT1VOfz4CpnYTcEEEtKNP2tt4V81Mz1YkUfbTI54.pub
cli/vpn/openvpn/: starting_points_eu-starting-point-2-dhcp.ovpn
cli/vpn/openvpn/srcc/: context.rs  main.rs
cli/vpn/openvpn/srcc/commands/: check.rs  config.rs  dashboard.rs  identity.rs  mod.rs  system.rs  wormhole.rs
cli/vpn/openvpn/srcc/commands/connect/: completion.rs  editor.rs  input.rs  mod.rs  prompt.rs  session.rs  tunnels.rs
cli/vpn/openvpn/srcc/ui/: feedback.rs  prompts.rs
cli_old/: Cargo.toml
cli_old/src/: display.rs
cli_old/src/commands/: check.rs  passwd.rs  peer.rs
client-state/peers/: anonymous-windows.json
docs/: AGENT.md  ARCHITECTURE_CRATE_SPLIT.md  ARCHITECTURE_CROSS_PLATFORM.md  ARCHITECTURE_STATE.md  AUDIT_FLOWS.md  AUTOMATION_STABILITY.md  BORROW_OBJECTIVES.md  CLI_UX_COMPONENTS.md  HANDOVER_FOR_NEW_SESSION.md  PERMANENT_TERMINAL_SOLUTION.md  PROJECT_ASSESSMENT.md  PROJECT_DESIGN.md  ROADMAP.md  SECURITY_AUDIT.md  STABILIZATION_AND_POLISH_PLAN.md  TERMINAL_STABILIZATION_PLAN.md  TERMINAL_UX_PLAN.md  UX_GUIDELINES.md  V0_4_0_RELEASE.md  V0_5_0_ROADMAP.md  WINDOWS_CONPTY_LIMITATIONS.md  WINDOWS_HANDOFF.md  WORMHOLE_DESIGN.md  architecture.md  audit-2026-05-31.md  feature_proposals.md  future_roadmap.md  handoff-linux.md  improvements-audit.md  multiplex.md  pre-v0.4.0-audit.md  protocol.md  quality-check-list.md  security.md
docs/dev/: deferred-roadmap.md
examples/: heap_profile.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_ipc.rs  fuzz_metadata.rs  fuzz_ticket.rs  fuzz_transfer_frame.rs
irosh-0.1.0/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT
irosh-0.1.0/.github/workflows/: release.yml
irosh-0.1.0/cli/: Cargo.toml
irosh-0.1.0/docs/: architecture.md  protocol.md  security.md
irosh-0.1.0/public/: _redirects
irosh-0.1.0/public/scripts/: install.ps1  uninstall.ps1  uninstall.sh
irosh-0.1.0/src/: config.rs
irosh-0.1.0/src/client/: handler.rs
irosh-0.1.0/src/client/tests/: mod.rs  session.rs
irosh-0.1.0/src/client/transfer/: store.rs
irosh-0.1.0/src/server/: mod.rs  startup.rs
irosh-0.1.0/src/server/handler/: pty.rs
irosh-0.1.0/src/server/transfer/: control.rs  helpers.rs  mod.rs
irosh-0.1.0/src/session/: mod.rs
irosh-0.1.0/src/storage/: mod.rs  trust.rs
irosh-0.1.0/src/transport/: iroh.rs  mod.rs
irosh-0.1.0/src/transport/transfer/: codec.rs  mod.rs  types.rs
notes/: irosh_readme.md  v0.1.0_review.md
public/scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
scratch/: IROSH_DEFINITION.md  PROJECT_ASSESSMENT.md  RUSSH_UPGRADE_ANALYSIS.md  RUSSH_UPGRADE_CHECKLIST.md  build_android.sh  check_iroh.rs  test_rng.rs
src/: README.md  auth.rs  config.rs  diagnostic.rs  error.rs  lib.rs  metrics.rs
src/client/: connect.rs  handler.rs  ipc.rs  mod.rs
src/client/tests/: auth.rs  mod.rs  options.rs  session.rs
src/client/transfer/: control.rs  mod.rs  store.rs
src/server/: ipc.rs  mod.rs  shell_access.rs  side_streams.rs  startup.rs  tests.rs
src/server/handler/: mod.rs  pty.rs
src/server/transfer/: control.rs  helpers.rs  mod.rs  state.rs
src/session/: mod.rs  pty.rs  state.rs
src/storage/: config.rs  keys.rs  mod.rs  peers.rs  shadow.rs  trust.rs  utils.rs
src/sys/: mod.rs  service.rs  signals.rs
src/sys/unix/: mod.rs  pty.rs  service.rs
src/sys/windows/: job.rs  mod.rs  pty.rs  service.rs
src/transport/: iroh.rs  mod.rs  stream.rs  ticket.rs  wormhole.rs
src/transport/metadata/: codec.rs  mod.rs  tests.rs  types.rs
src/transport/transfer/: codec.rs  helpers.rs  mod.rs  proptests.rs  tests.rs  types.rs
src_old/: diagnostic.rs  error.rs
src_old/client/: handler.rs
src_old/client/tests/: auth.rs  mod.rs  session.rs
src_old/client/transfer/: control.rs  files.rs
src_old/server/: mod.rs  tests.rs
src_old/server/handler/: pty.rs
src_old/server/transfer/: helpers.rs  mod.rs
src_old/session/: mod.rs
src_old/storage/: mod.rs
src_old/transport/: mod.rs  stream.rs  wormhole.rs
src_old/transport/metadata/: mod.rs  types.rs
src_old/transport/transfer/: codec.rs  helpers.rs  types.rs
tests/: error_propagation.rs  integration.rs  verify_exec.rs
(+14 files in other folders)
