[workspace]
members = ["cli"]
resolver = "2"

[package]
name = "irosh"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Shedrack Godstime <shedrackgodstime@gmail.com>"]
description = "SSH sessions over Iroh peer-to-peer transport"
readme = "README.md"
repository = "https://github.com/shedrackgodstime/irosh"
license = "MIT OR Apache-2.0"
keywords = ["ssh", "iroh", "p2p", "remote", "shell"]
categories = ["network-programming", "asynchronous"]
exclude = ["cli/"]

# Feature flags let downstream consumers compile only what they need.
# See docs/architecture.md "Feature Flags and Binary Size" for full rationale.
[features]
default   = ["server", "client"]
server    = ["transport", "storage", "dep:russh", "dep:portable-pty"]
client    = ["transport", "storage", "dep:russh"]
storage   = ["dep:serde", "dep:serde_json"]
transport = ["dep:iroh", "dep:iroh-tickets"]
discovery = ["transport"]

[dependencies]
# iroh: core P2P transport, endpoint management, hole-punching.
iroh = { version = "0.97.0", optional = true, features = ["address-lookup-mdns"] }

# iroh-tickets: handling the official human-readable tickets (endpoint...).
iroh-tickets = { version = "0.4.0", optional = true }

# iroh-gossip: pub/sub protocol for peer list synchronization.
iroh-gossip = { version = "0.97.0", optional = true }

# portable-pty: cross-platform PTY allocation and process spawning.
portable-pty = { version = "0.9.0", optional = true }

# russh: SSH protocol implementation (client + server).
russh = { version = "0.55.0", optional = true, default-features = false, features = ["ring"] }

# serde + serde_json: serialization for trust records and peer profiles.
serde      = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }

# thiserror: error type derivation.
thiserror = "2"

# libc: Unix syscall bindings for PTY, signals, and terminal control.
libc = "0.2"

# tracing: structured logging and diagnostics.
tracing = "0.1"

# tokio: async runtime and traits. 
tokio = { version = "1", features = ["io-util", "sync", "macros", "process", "net"] }
tokio-util = { version = "0.7" }

# rand: cryptographically secure random number generation.
rand = "0.9"

# data-encoding: Base32 encoding (for legacy ticket fallback).
data-encoding = "2.7"

# postcard: Compact binary serialization (for legacy ticket fallback).
postcard = { version = "1", features = ["alloc"] }

# hex: Hexadecimal encoding for protocol identifiers.
hex = "0.4"
# sha2: Standard hashing for secret-derived ALPNs.
sha2 = "0.10"

# walkdir: Recursive directory walking for uploads.
walkdir = "2"

[dev-dependencies]
# tokio with full features for async test harnesses.
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"

[package.metadata.docs.rs]
# Build documentation with all features enabled (server, client, etc.)
all-features = true
# Explicitly build for major platforms to ensure cross-platform API visibility.
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
