[workspace]
members = ["cli"]
resolver = "2"

[patch.crates-io]
ed25519-dalek = { version = "3.0.0-pre.7" }

[package]
name = "irosh"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
authors = ["Shedrack Godstime <shedrackgodstime@gmail.com>"]
description = "Secure P2P SSH and data transfer protocol. Connect to any machine without an IP address, open ports, or VPNs."
readme = "src/README.md"
repository = "https://github.com/shedrackgodstime/irosh"
license = "MIT OR Apache-2.0"
keywords = ["ssh", "p2p", "iroh", "nat-traversal", "quic"]
categories = ["network-programming", "asynchronous"]
exclude = [
    "cli/",
    "scratch/",
    "public/",
    ".github/",
    "docs/",
]

# Feature flags let downstream consumers compile only what they need.
# See docs/architecture.md "Feature Flags and Binary Size" for full rationale.
[features]
default   = ["server", "client"]
server    = ["transport", "storage", "dep:russh", "dep:portable-pty"]
client    = ["transport", "storage", "dep:russh"]
storage   = ["dep:serde", "dep:serde_json"]
transport = ["dep:iroh", "dep:iroh-gossip", "dep:iroh-tickets", "dep:iroh-blobs"]
console = ["dep:console"]

[dependencies]
# iroh: core P2P transport, endpoint management, hole-punching.
iroh = { version = "1.0.0-rc.0", optional = true }
iroh-gossip = { version = "0.99.0", optional = true, features = ["net"] }
iroh-blobs = { version = "0.101.0", optional = true }
n0-future = "0.1.0"
irpc = "0.1.0"

# iroh-tickets: handling the official human-readable tickets (endpoint...).
iroh-tickets = { version = "1.0.0-rc.0", optional = true }
pkarr = "5.0.2"

# portable-pty: cross-platform PTY allocation and process spawning.
portable-pty = { version = "0.9.0", optional = true }

# russh: SSH protocol implementation (client + server).
russh = { version = "0.60.3", optional = true, default-features = false, features = ["ring"] }

# serde + serde_json: serialization for trust records and peer profiles.
serde      = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }

# thiserror: error type derivation.
thiserror = "2"

# tracing: structured logging and diagnostics.
tracing = "0.1"

# tokio: async runtime and traits. 
tokio = { version = "1", features = ["io-util", "sync", "macros", "process", "net", "fs", "signal"] }
tokio-util = { version = "0.7" }
dirs = "6"

# rand: cryptographically secure random number generation.
rand = "0.9"

# data-encoding: Base32 encoding (for legacy ticket fallback).
data-encoding = "2.7"

# postcard: Compact binary serialization (for legacy ticket fallback).
postcard = { version = "1", features = ["alloc"] }

# hex: Hexadecimal encoding for protocol identifiers.
hex = "0.4"
# sha2: Standard hashing for secret-derived ALPNs.
sha2 = "0.10"

# walkdir: Recursive directory walking for uploads.
walkdir = "2"
argon2 = "0.5.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }
console = { version = "0.16.3", optional = true }
chrono = { version = "0.4.44", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
] }
windows-service = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
winreg = "0.56.0"

[dev-dependencies]
# tokio with full features for async test harnesses.
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"

[package.metadata.docs.rs]
# Build documentation with all features enabled (server, client, etc.)
all-features = true
# Explicitly build for major platforms to ensure cross-platform API visibility.
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic for smaller binaries
strip = true        # Strip symbols from binary
debug = false       # No debug symbols
