[package]
name = "irosh-cli"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
publish = false

[[bin]]
name = "irosh"
path = "src/main.rs"

[[bin]]
name = "irosh-server"
path = "bin/server.rs"

[[bin]]
name = "irosh-client"
path = "bin/client.rs"

[dependencies]
irosh = { path = "..", features = ["server", "client", "storage", "transport"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
serde_json = "1"
indicatif = "0.17"
