[package]
name = "irosh-cli"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
publish = false

[[bin]]
name = "irosh"
path = "src/main.rs"

[dependencies]
irosh = { path = "..", features = ["server", "client", "storage", "transport"] }
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
rand = "0.9"
serde_json = "1"
indicatif = { version = "0.17", default-features = false, features = ["unicode-width", "vt100"] }
dialoguer = "0.12.0"
shell-words = "1.1.1"
unicode-width = "0.1"
console = "0.16.3"
