[package]
name = "irosh-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
irosh = { path = ".." }
irosh-cli = { path = "../cli" }
serde_json = "1"
tokio = { version = "1", features = ["rt", "io-util"] }

[[bin]]
name = "fuzz_ticket"
path = "fuzz_targets/fuzz_ticket.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ipc"
path = "fuzz_targets/fuzz_ipc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_transfer_frame"
path = "fuzz_targets/fuzz_transfer_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_metadata"
path = "fuzz_targets/fuzz_metadata.rs"
test = false
doc = false
bench = false
